Redis ve Docker entegrasyonu eklendi, Exception handler ve mapper güncellendi